# Podles-DSP-Piano

./: .gitignore  README.md  RUNTHIS_T19_ONSETS_FRAMES.md  demo.html  run_app.py
ESP_piano/legacy/: adc_sampler.c  audio_dsp.c  audio_dsp.h
ESP_piano/main/: CMakeLists.txt  audio_dsp.c  main.cpp  web_server.cpp
ESP_piano/main/core/: esp_hint.c  pcm_framer.c
ESP_piano/main/hal/: capture_adc.c  wifi_sta.c
ESP_piano/main/web_app/: app.js
contracts/include/: audio_stream_v1.h
contracts/tests/: test_audio_stream.py  test_note_events.py
docs/: CONTRACTS.md  PHYSICAL_TEST_GUIDE.md  REFACTOR_NOTES.md  TOOLCHAIN.md
final_bar_matching/: PROVISIONAL_SCORE_CONTRACT.md  chord_compare.js  frequency_score_pipeline.js  full_score_progress_tracker.js  score_normalizer.js  score_preprocessor.js  simulator_browser_bundle.js  simulator_browser_integration.js  simulator_milestone2.js  simulator_milestone3.js
final_bar_matching/fixtures/: full_score.draft.example.json  fur_elise.parser.example.json  parsed_score.example.json
mobile/: App.tsx  package-lock.json  package.json
server/: app.py  package-lock.json
server/static/: index.html
server/tests/: test_basic_pitch.py  test_transcriber.py
server/transcriber/: base.py
src/: legend.txt  project_tree.txt
src/ESP_lights/: CMakeLists.txt
src/ESP_piano/: CMakeLists.txt
src/contracts/: CMakeLists.txt  audio_stream_v1.c  note_events_v1.py  (+3 more)
tools/: generate_fixtures.py
web/: index.html  package-lock.json  tailwind.config.js
web_app/: app.js  final_bar_matching.browser.js  index.html  score_matching_integration.js
(+67 files in other folders)
